lint fix and updated test